[package]
name = "simulated-annealing"
version = "0.1.0"
authors = ["ilya <ilyaandreev2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "^0.4.0"
rand = "0.8.3"
plotlib = "0.5.1"
clap = "2.33.3"